Add mail address

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -77,4 +77,4 @@
             %dt Phone
             %dd 080-9021-4436
             %dt Email
-            %dd yohei.senu@gmail.com
+            %dd yohei.senju@gmail.com
